@@ -439,12 +439,12 @@ class Database(rdbms_common.Database):
 
 class sqliteClass:
     def filter(self, search_matches, filterspec, sort=(None,None),
-            group=(None,None)):
+            group=(None,None), retired=False):
         """ If there's NO matches to a fetch, sqlite returns NULL
             instead of nothing
         """
         return [f for f in rdbms_common.Class.filter(self, search_matches,
-            filterspec, sort=sort, group=group) if f]
+            filterspec, sort=sort, group=group, retired=retired) if f]
 
 class Class(sqliteClass, rdbms_common.Class):
     pass
